rns-lang/tests/snapshots/err-parser-instruction-missing_args.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 1 locals 1
        invokespecial
    .end
.end

----- STDOUT -----

----- STDERR -----
Error: missing class name
   ╭─[ test_data/integration/err/parser/instruction/missing_args.ja:6:22 ]
   │
 6 │         invokespecial
   │                      │ 
   │                      ╰─ expected a class name
   │ 
   │ Note: This instruction requires a class name as its first argument.
───╯
